<resources>
    <string name="api_photos">https://happyguest.joaopinto.pt/</string>
    <string name="app_name">HappyGuest</string>
    <string name="background_image">Background Image</string>
    <string name="logo_image">Logo Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_current">Current Password</string>
    <string name="password_new">New Password</string>
    <string name="addImage">Add Image</string>
    <string name="name">Name</string>
    <string name="phoneNr">Phone Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="code">Code</string>
    <string name="associate">Associate</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="remove_profile">Remove Profile</string>
    <string name="change">Change</string>
    <string name="confirm">Confirm</string>
    <string name="address">Address</string>
    <string name="birthDate">Birth Date</string>
    <string name="select_image">Select Image</string>
    <string name="select_files">Select Files</string>
    <string name="code_associate">Code Associate</string>
    <string name="codes_valid">Valid Codes</string>
    <string name="code_entry_date">Entry ➔ </string>
    <string name="code_exit_date">Exit ➔ </string>
    <string name="code_rooms">Rooms: </string>
    <string name="complaint_local">Local: </string>
    <string-array name="complaint_status" translatable="true">
        <item>All</item>
        <item>Pending</item>
        <item>Solving</item>
        <item>Resolved</item>
        <item>Annulled</item>
    </string-array>
    <string name="remove_code">Remove Code</string>
    <string name="star_review">Star</string>
    <string name="switch_order">Most Recent</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="date">Date:</string>
    <string name="date2">Date</string>
    <string name="title">Title</string>
    <string name="local">Local</string>
    <string name="review_anonymous">Anonymous Review</string>
    <string name="complaint_anonymous">Anonymous Complaint</string>
    <string name="addFiles">Add Files</string>
    <string name="open">Open</string>
    <string name="no_comment">No Comment</string>
    <string name="no_response">No Response</string>
    <string name="authorized_sharing">Authorized Sharing</string>
    <string name="shared">Shared Review</string>
    <string name="response">Response</string>
    <string name="response_date">Answered in</string>
    <string name="pending">Pending</string>
    <string name="solving">Solving</string>
    <string name="resolved">Resolved</string>
    <string name="canceled">Annulled</string>
    <string name="rejected">Rejected</string>
    <string name="working">Preparing</string>
    <string name="delivered">Delivered</string>
    <string name="accepted">Accepted</string>
    <string name="finished">Finished</string>
    <string name="createdDate">Created in</string>
    <string name="complaint_file">File Nº</string>
    <string name="complaint_files">Files: </string>
    <string-array name="order_type" translatable="true">
        <item>All</item>
        <item>Room Cleaning</item>
        <item>Objects Request</item>
        <item>Foods Request</item>
    </string-array>
    <string name="order_objects">Objects: </string>
    <string name="order_foods">Food: </string>
    <string name="hotel_website">Website: </string>
    <string name="hotel_phone">Phone: </string>
    <string name="hotel_email">Email: </string>
    <string name="hotel_address">Address: </string>
    <string name="hotel_description">Description: </string>
    <string name="hotel_capacity">Capacity: </string>
    <string name="hotel_info">Hotel Information</string>
    <string name="hotel_commodities">Commodities</string>
    <string name="hotel_policies">Policies</string>
    <string name="hotel_accesses">Accesses</string>
    <string name="region_info">Region Information</string>
    <string name="region_proximity">Proximity</string>
    <string name="region_activities">Activities</string>
    <string name="more_info">+</string>
    <string name="region_description">Description: </string>
    <string name="open_more">Open</string>
    <string name="qr_code">QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="home_services">Room Services</string>
    <string name="home_activities">Activities</string>
    <string name="home_history">History</string>
    <string name="home_info">Information\'s</string>
    <string name="home_btn_clean">Cleaning</string>
    <string name="home_btn_objects">Objects</string>
    <string name="home_btn_food">Food</string>
    <string name="home_btn_restaurant">Book Table</string>
    <string name="home_btn_spa">Spa</string>
    <string name="home_btn_gym">Gym</string>
    <string name="home_btn_complaints">Complaints</string>
    <string name="home_btn_reviews">Reviews</string>
    <string name="home_btn_hotel">Hotel</string>
    <string name="home_btn_region">Region</string>
    <string name="menu_icon">Menu</string>
    <string name="profile_icon">Profile</string>
    <string name="barTitle">Leiria Hotel</string>
    <string name="menu_home">Home Page</string>
    <string name="menu_code">Codes</string>
    <string name="menu_reserve_code">Reserve Codes</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_password">Password</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_cleaning">Room Cleaning</string>
    <string name="menu_objects">Objects Order</string>
    <string name="menu_food">Food Order</string>
    <string name="menu_spa">Spa</string>
    <string name="menu_gym">Gym</string>
    <string name="menu_register_review">Register Review</string>
    <string name="menu_complaints">Complaints</string>
    <string name="menu_register_complaint">Register Complaint</string>
    <string name="menu_review">Review Nº</string>
    <string name="menu_complaint">Complaint Nº</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_order">Order</string>
    <string name="menu_reserves">Reserves</string>
    <string name="menu_reserve">Reserve</string>
    <string name="menu_requested_orders">Placed Orders</string>
    <string name="menu_requested_reserves">Placed Reserves</string>
    <string name="menu_table_reservation">Table Reservation</string>
    <string name="menu_restaurant">Table Reservation</string>
    <string name="menu_hotel">Hotel information</string>
    <string name="menu_region">Region information</string>
    <string name="menu_checkout">Check-Out</string>
    <string name="services_schedule">Schedule: </string>
    <string name="services_unavailable">Unavailable Temporarily</string>
    <string name="services_schedule_tomorrow">Tomorrow</string>
    <string name="services_schedule_separator">and</string>
    <string name="services_email">Email: </string>
    <string name="services_phone">Phone: </string>
    <string name="services_occupation">Occupation: </string>
    <string name="services_location">Location: </string>
    <string name="services_description">Description</string>
    <string name="services_menu">Open Menu</string>
    <string name="services_order">Order</string>
    <string name="services_room">Room: </string>
    <string name="schedule_required">Please select a available schedule!</string>
    <string name="room_required">Please select a room number!</string>
    <string name="items_required">Please select at least one item!</string>
    <string name="people_required">Please insert the number of people!</string>
    <string name="order">Order</string>
    <string name="no_orders_request">You don\'t have any orders.</string>
    <string name="no_reserves_request">You don\'t have any reserves.</string>
    <string name="quantity">0</string>
    <string name="price">0€</string>
    <string name="total_price">Total: </string>
    <string name="quantity_add">Add Quantity</string>
    <string name="quantity_remove">Remove Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="items_category">Category:</string>
    <string name="reserve_nr_people">Nº People: </string>
    <string name="service_name">Service: </string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="restore_error">Error restoring session.</string>
    <string name="logout_error">Error logging out.</string>
    <string name="api_error">Error connecting to the server!</string>
    <string name="data_error">Error loading data!</string>
    <string name="codes_error">Error loading codes!</string>
    <string name="reviews_error">Error loading reviews!</string>
    <string name="complaints_error">Error loading complaints!</string>
    <string name="orders_error">Error loading orders!</string>
    <string name="reserves_error">Error loading reserves!</string>
    <string name="error_file">Error loading file!</string>
    <string name="error_file_app">Error opening file!</string>
    <string name="error_cancel">Error canceling order!</string>
    <string name="notifications_error">Error enabling notifications!</string>
    <string name="notifications_disabled">Notifications will not be received!</string>
    <string name="email_required">Enter your email.</string>
    <string name="password_required">Enter your password.</string>
    <string name="invalid_email">The email is not valid!</string>
    <string name="name_required">Enter your name.</string>
    <string name="name_too_short">The name is too short!</string>
    <string name="password_too_short">The password is too short!</string>
    <string name="password_confirmation_required">Confirm your password.</string>
    <string name="password_confirmation_not_match">The confirmation does not match!</string>
    <string name="password_same_as_current">The new password must be different from the current one!</string>
    <string name="new_password_required">Enter your new password.</string>
    <string name="invalid_phone">The phone number is not valid!</string>
    <string name="code_required">Enter your code.</string>
    <string name="invalid_code">The code is not valid!</string>
    <string name="star_required">Select one or more stars.</string>
    <string name="date_required">Select a date.</string>
    <string name="local_required">Enter the local.</string>
    <string name="title_required">Enter the title.</string>
    <string name="comment_required">Enter your comment.</string>
    <string name="title_min_length">The title is too short!</string>
    <string name="local_min_length">The local is too short!</string>
    <string name="comment_min_length">The comment is too short!</string>
    <string name="address_too_short">The address is too short!</string>
    <string name="message_associate_register">You don\'t have a valid code, register one to access services and activities.</string>
    <string name="invalid_birth_date">The birth date is not valid!</string>
    <string name="restore_success">Session restored successfully.</string>
    <string name="classification_review">How do you rate your stay?</string>
    <string name="comment_review">Leave your comment:</string>
    <string name="no_codes">You don\'t have any associated code.</string>
    <string name="no_reviews">You don\'t have any reviews.</string>
    <string name="no_complaints">You don\'t have any complaints.</string>
</resources>