<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_complaints"
            android:icon="@drawable/complaint_icon"
            android:title="@string/menu_complaints" />
        <item
            android:id="@+id/nav_reviews"
            android:icon="@drawable/star_icon"
            android:title="@string/menu_reviews" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/order_icon"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_codes"
            android:icon="@drawable/key_icon"
            android:title="@string/menu_code" />
    </group>
</menu>