<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.auth.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotipo"
        android:contentDescription="@string/logo_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:errorTextColor="#B84141"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:startIconDrawable="@android:drawable/sym_action_email"
        app:startIconTint="@color/gold">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"
            android:layout_width="295dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="295dp"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:errorTextColor="#B84141"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        app:startIconTint="@color/gold">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPassword"
            android:layout_width="295dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:buttonTint="#000000"
        android:text="@string/remember"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/login"
        app:icon="@android:drawable/ic_lock_idle_lock"
        app:iconPadding="-25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/button_border"
        android:text="@string/register"
        android:textColor="@android:color/black"
        app:icon="@android:drawable/ic_input_add"
        app:iconPadding="-25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0"
        app:iconTint="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>