<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="25dp"
    android:layout_marginBottom="25dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="10dp"
            android:elevation="10dp"
            android:gravity="center_vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/layoutOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <ImageButton
                android:id="@+id/btnQntRemove"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_primary"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/quantity_remove"
                android:elevation="10dp"
                app:srcCompat="@drawable/close_icon"
                app:tint="@color/ic_bg"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

            <TextView
                android:id="@+id/txtItemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btnQntAdd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_primary"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/quantity_add"
                android:elevation="10dp"
                app:srcCompat="@drawable/close_icon"
                app:tint="@color/ic_bg"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>